--- a/src/components/header/User/user.sass
+++ b/src/components/header/User/user.sass
@@ -2,4 +2,29 @@
 @import 'src/assets/sass/helpers/_mixins'
 
 .user
+
 	&__container
+		display: flex
+		align-items: center
+
+	&__avatar
+		width: 50px
+		height: 50px
+		margin-right: 15px
+		background-position: center center
+		background-size: contain
+		border-radius: 50%
+
+
+	&__username
+
+	&__dropdown
+		display: none
+
+
+	&__item
+
+
+	&__title
+
+
