--- a/src/pages/StreamPage/streampage.sass
+++ b/src/pages/StreamPage/streampage.sass
@@ -11,10 +11,13 @@
 		flex-direction: column
 		align-items: stretch
 
-	&__video
+	&__video-container
 		width: 100%
 		+aspectRatio(16,9)
 
+	&__video
+		width: 100%
+		height: 100%
 
 	&__info
 
@@ -23,7 +26,7 @@
 		width: 100%
 		max-width: 340px
 		min-width: 340px
-		padding-left: 30px
+		padding-left: 15px
 		iframe
 			width: 100%
 			height: 100%
