--- a/src/layouts/BaseLayout/baselayout.sass
+++ b/src/layouts/BaseLayout/baselayout.sass
@@ -51,14 +51,14 @@
 		flex-direction: column
 		background-color: $dark
 		color: $text
-		padding: 30px 15px
+		padding: 15px
 
 	&__content-head
 		display: flex
 		align-items: center
 		justify-content: space-between
 		min-height: 50px
-		margin-bottom: 30px
+		margin-bottom: 15px
 
 	&__content-container
 		width: 100%
