--- a/src/pages/GamesPage/GameView/gameview.sass
+++ b/src/pages/GamesPage/GameView/gameview.sass
@@ -14,7 +14,9 @@
 		pointer-events: none
 		+after
 			+cover
-			background-image: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(37,34,45,1) 85%)
+			background-image: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba($dark,1) 85%)
+			pointer-events: none
+
 	&__container
 		z-index: 1
 
