--- a/src/assets/sass/components/_button.sass
+++ b/src/assets/sass/components/_button.sass
@@ -2,14 +2,13 @@
 	font-family: $f
 	width: auto
 	min-width: 210px
-	height: 38px
+	height: 40px
 	padding: 0 20px
-	border-radius: 4px
 	background-color: $accent
 	color: $white
 	font-size: 16px
 	font-weight: 600
-	line-height: 38px
+	line-height: 40px
 	text-align: center
 	+tr
 	+h
@@ -28,5 +27,8 @@
 	&:focus
 		outline: none
 
-	&--widthAuto
+	&--small
+		padding: 0 14px
 		min-width: auto
+		line-height: 34px
+		height: 34px
