--- a/src/pages/StreamPage/streampage.sass
+++ b/src/pages/StreamPage/streampage.sass
@@ -2,8 +2,40 @@
 @import 'src/assets/sass/helpers/_mixins'
 
 .streamPage
-	display: flex
+	width: 100%
 	height: 100%
+	display: flex
+
+	&__bg
+		position: fixed
+		top: 0
+		left: $sidebarWidth
+		right: 0
+		bottom: 0
+		height: 100vh
+		z-index: -1
+		background-size: cover
+		background-position: center center
+		background-repeat: no-repeat
+
+		opacity: 0
+		+trs(1500, opacity)
+		+before
+			+cover
+			background-image: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba($black,1) 0%)
+			pointer-events: none
+			+trs(1500)
+		&.loaded
+			opacity: 0.05
+			+trs(1500, opacity)
+			+before
+				background-image: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba($black,1) 85%)
+
+
+	&__container
+		display: flex
+		width: 100%
+		min-height: 100%
 
 	&__content
 		width: 100%
@@ -13,21 +45,78 @@
 
 	&__video-container
 		width: 100%
+		// margin: 0 -14px
 		+aspectRatio(16,9)
+		margin-bottom: $globalPaddings
 
 	&__video
 		width: 100%
 		height: 100%
+		+cover
 
 	&__info
 
 
 	&__chat
-		width: 100%
-		max-width: 340px
-		min-width: 340px
-		padding-left: 15px
+		position: relative
+		max-width: 0
+		width: 0
+		&.visible
+			max-width: 340px
+			padding-left: $globalPaddings
+			width: 100%
+			flex-grow: 1
+			min-width: 340px
+
 		iframe
 			width: 100%
 			height: 100%
+
+	&__chatToggler
+		&--chat
+			position: absolute
+			top: 0
+			left: $globalPaddings
+			border-radius: 0
+			width: 50px
+			height: 50px
+			line-height: 50px
+			font-weight: 900
+
+	&__streamer
+		display: flex
+		align-items: center
+		justify-content: flex-start
+		min-height: 50px
+
+
+	&__streamer-avatar
+		width: 50px
+		height: 50px
+		margin-right: $globalPaddings
+		// box-shadow: 0 0 10px 0 $accent
+
+	&__streamer-box
+		margin-right: $globalPaddings
+
+
+	&__streamer-box-name
+
+
+	&__streamer-box-onlineTime
+		font-size: 12px
+		color: $accent
+		font-weight: 600
+
+	&__streamer-actions
+		margin-left: auto
+		display: flex
+		.button
+			margin-right: $globalPaddings
+			&:last-child
+				margin-right: 0
+
+
+
+
 
