--- a/src/pages/StreamPage/streamPageGame.sass
+++ b/src/pages/StreamPage/streamPageGame.sass
@@ -22,7 +22,7 @@
 	&__box
 		width: 100%
 		display: flex
-		align-items: center
+		align-items: flex-start
 		margin-bottom: $globalPaddings
 
 	&__streamerStatus
@@ -34,6 +34,7 @@
 	&__currentOnline
 		margin-left: 15px
 		font-weight: 900
+		line-height: 20px
 
 
 	&__gameTitle
